--- a/test/fixtures/merchants.yml
+++ b/test/fixtures/merchants.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
+  username: griffiam
+  email: sesamestreet@yahoo.com
 
 two:
-  username: MyString
-  email: MyString
+  username: yggurlie
+  email: yggurlie@yahoo.com
+
+three:
+  username: maddiemax
+  email: maddiemaxwell@yahoo.com
