--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,11 +1,16 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  price: 1.5
-  description: MyString
+plushie:
+  name: Brain Plushie
+  price: 15.0
+  description: A beautiful integlligent brain plushie
 
-two:
-  name: MyString
-  price: 1.5
-  description: MyString
+puzzle:
+  name: Brain Puzzle
+  price: 100.0
+  description: improve ur mind!
+
+puddy:
+  name: Brain Puddy
+  price: 4.75
+  description: puddy for ur brain! 
