--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -2,35 +2,30 @@
 
 pending:
   quantity: 1
-  status: :pending
+  status: pending
   order: one
   product: plushie
-  order: one
 
 paid:
   quantity: 1
-  status: :paid
-  order: one
-  product: puzzle
+  status: paid
   order: two
+  product: puzzle
 
 complete:
   quantity: 1
-  status: :complete
-  order: two
-  product: puddy
+  status: complete
   order: one
+  product: puddy
 
 cancelled:
   quantity: 1
-  status: :cancelled
+  status: cancelled
   order: two
   product: plushie
-  order: two
 
 many:
   quantity: 20
-  status: :pending
+  status: pending
   order: two
   product: puzzle
-  order: one
