--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -10,7 +10,7 @@ two:
   product: plushie
   description: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
-two:
+three:
   rating: 1
   product: plushie
   description: Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
