Work on product model tests to pass

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -2,15 +2,23 @@
 
 plushie:
   name: Brain Plushie
-  price: 15.0
+  price: 15
   description: A beautiful integlligent brain plushie
+  inventory: 10
+  merchant: one
+
 
 puzzle:
   name: Brain Puzzle
-  price: 100.0
+  price: 100
   description: improve ur mind!
+  inventory: 5
+  merchant: two
+
 
 puddy:
   name: Brain Puddy
-  price: 4.75
-  description: puddy for ur brain! 
+  price: 475
+  description: puddy for ur brain!
+  inventory: 100
+  merchant: three
