Some more tests for product controller

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -31,4 +31,4 @@ yoga:
   description: puddy for ur brain!
   inventory: 100
   merchant: three
-  categories: toy
+  categories: meditation, apparel
