--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -29,3 +29,13 @@ three:
   cvv: nil
   zip: nil
   status: cart
+
+four:
+  email: nil
+  mailing_address: nil
+  cc: nil
+  cc_name: nil
+  cc_expiration: nil
+  cvv: nil
+  zip: nil
+  status: cart
