Add passing tests to make sure the product inventory changes when order is updated

--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -35,3 +35,9 @@ paid2:
   status: paid
   order: two
   product: puzzle
+
+pending2:
+  quantity: 5
+  status: pending
+  order: four
+  product: yoga
